deploy/kubernetes/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stratos
  namespace: stratos
  annotations:
    nginx.org/ssl-services: "stratos-ui-ext"
spec:
  rules:
  - host: stratos.127.0.0.1.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: stratos-ui-ext
          servicePort: 443
  tls:
  - hosts:
    - stratos.127.0.0.1.xip.io
    secretName: stratos-tls
